--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
+        <script src="js/jquery-3.2.1.slim.min.js"></script>
 
         <script src="js/signals.min.js"></script>
         <script src="js/hasher.min.js"></script>
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div class="menu">
-            <h1 class="menu__header">Petr Devaikin</h1>
+            <a class="menu__header" href="/">Petr Devaikin</a>
             <ul class="menu__main">
                 <li>
                     <a href="#interaction">Interaction design</a>
@@ -68,7 +68,7 @@
                         <img src="img/destruction.jpg" />
                     </a>
                 </div>
-                <p class="project__year">2017</p>
+                <p class="project__meta">2017</p>
             </div>
 
             <div class="project" data-type="interaction,affective" data-year="2017">
@@ -81,7 +81,7 @@
                         <img src="img/ar.jpg" />
                     </a>
                 </div>
-                <p class="project__year">2017</p>
+                <p class="project__meta">2017</p>
             </div>
 
             <div class="project" data-type="infovis" data-year="2016">
@@ -95,7 +95,7 @@
                         <img src="img/duma.jpg" />
                     </a>
                 </div>
-                <p class="project__year">2016</p>
+                <p class="project__meta">2016</p>
             </div>
 
             <div class="project" data-type="vr" data-year="2016">
@@ -108,7 +108,7 @@
                         <img src="img/destruction.jpg" />
                     </a>
                 </div>
-                <p class="project__year">2016</p>
+                <p class="project__meta">2016</p>
             </div>
 
             <div class="project" data-type="interaction,creative" data-year="2016">
@@ -122,7 +122,7 @@
                         <img src="img/movement.jpg" />
                     </a>
                 </div>
-                <p class="project__year">2016</p>
+                <p class="project__meta">2016</p>
             </div>
 
             <div class="project" data-type="interaction,vr" data-year="2016">
@@ -136,7 +136,7 @@
                         <img src="img/ar.jpg" />
                     </a>
                 </div>
-                <p class="project__year">2016</p>
+                <p class="project__meta">2016</p>
             </div>
 
             <div class="project" data-type="ux" data-year="2015">
@@ -150,7 +150,7 @@
                         <img src="img/lobster.jpg" />
                     </a>
                 </div>
-                <p class="project__year">2015</p>
+                <p class="project__meta">2015</p>
             </div>
 
             <div class="project" data-type="creative" data-year="2014">
@@ -163,7 +163,7 @@
                         <img src="img/katz1.jpg" />
                     </a>
                 </div>
-                <p class="project__year">2014</p>
+                <p class="project__meta">2014</p>
             </div>
 
             <div class="project" data-type="infovis" data-year="2014">
@@ -176,7 +176,7 @@
                         <img src="img/hashtagmap.jpg" />
                     </a>
                 </div>
-                <p class="project__year">2014</p>
+                <p class="project__meta">2014</p>
             </div>
 
             <div class="project" data-type="infovis" data-year="2014">
@@ -192,7 +192,7 @@
                         <img src="img/katz2.jpg" />
                     </a>
                 </div>
-                <p class="project__year">2014</p>
+                <p class="project__meta">2014</p>
             </div>
         </div>
 
