--- a/ar/index.html
+++ b/ar/index.html
@@ -2,62 +2,72 @@
 <html>
     <head>
         <title>AR Furniture Magazine | Petr Devaikin</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <meta name="description" content="Free Web tutorials">
+        <meta name="keywords" content="Design,Interaction,UX,Visualization,Coding,Development">
+        <meta name="author" content="John Doe">
+
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../css/reset.css">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <link rel="stylesheet" type="text/css" href="../css/project.css">
+        <script src="../js/jquery-3.2.1.slim.min.js"></script>
     </head>
     <body>
         <div class="menu">
-            <a class="menu__name" href="/">Petr Devaikin</a>
+            <a class="menu__header menu__header--back" href="/">Petr Devaikin</a>
+            <div class="menu__footer">
+                &copy; 2017
+            </div>
         </div>
 
-        <div class="project-container">
-            <div class="project-container__foreground">
-                <div class="header">
-                    <h1 class="header__name">Augmented Reality Furniture Catalogue</h1>
-                    <p class="header__description">
-                        I collaborated with <a href="http://www.matteolever.com/">Matteo Lever</a> to
-                        design and implement a prototype of an augmented reality furniture catalogue as a part of the Augmented Reality and Tangible Interfaces course at the University of Paris-Sud. Each furniture item from the catalogue has a special adhesive marker on the same page. Users can point their smartphone camera to the marker to see a 3d model of the&nbsp;item and interact with it. Markers can be easily removed from each page and put together to create a model of an interior.
+        <div class="content">
+            <div class="project">
+                <h2 class="project__title">Augmented Reality Furniture Catalogue</h2>
+                <div class="project__meta">
+                    February 2016
+                    <p class="project__meta__supp">
+                        Technology:<br/>
+                        Unity3D
                     </p>
                 </div>
+                <p class="project__desc">
+                    I collaborated with <a href="http://www.matteolever.com/">Matteo Lever</a> to design and implement a prototype of an augmented reality furniture catalogue as a part of the Augmented Reality and Tangible Interfaces course at the University of Paris-Sud.
+                </p>
+                <p class="project__desc">
+                    Each furniture item from the catalogue has a special adhesive marker on the same page. Users can point their smartphone camera to the marker to see a 3d model of the&nbsp;item and interact with it. Markers can be easily removed from each page and put together to create a model of an interior.
+                </p>
 
-                <h2 class="subheader">Interaction Points</h2>
-
-                <div class="pictures">
-                    <div class="pictures__item">
-                        Point the camera to the marker to see the 3d model.
+                <h3 class="project__subtitle">Interaction Points</h3>
+                <div class="project__gallerie">
+                    <div class="project__gallerie__item">
+                        <p><span>1.</span>Point the camera to the marker to see the 3d model</p>
                         <img src="img/01.jpg"/>
                     </div>
-                    <div class="pictures__item">
-                        <br/>Select an item by tapping on it.
+                    <div class="project__gallerie__item">
+                        <p><span>2.</span>Select an item by tapping on&nbsp;it</p>
                         <img src="img/02.jpg"/>
-                        <div class="gesture gesture--tap"></div>
                     </div>
-                    <div class="pictures__item">
-                        Choose between available color and material options.
+                    <div class="project__gallerie__item">
+                        <p><span>3.</span>Choose between available color and material options</p>
                         <img src="img/03.jpg"/>
                     </div>
-                    <div class="pictures__item">
-                        Flick left or right to rotate the model 90 degrees.
+                    <div class="project__gallerie__item">
+                        <p><span>4.</span>Flick left or right to rotate the&nbsp;model 90 degrees</p>
                         <img src="img/04.jpg"/>
                         <div class="gesture gesture--flicker"></div>
                     </div>
-                    <div class="pictures__item">
-                        Find info about the item by moving the camera closer to the marker.
+                    <div class="project__gallerie__item">
+                        <p><span>5.</span>Find info by moving the camera closer to the marker</p>
                         <img src="img/05.jpg"/>
                     </div>
-                    <div class="pictures__item">
-                        <br/>Design your interior as you wish.
+                    <div class="project__gallerie__item">
+                        <p><span>6.</span>Design your interior as you wish</p>
                         <img src="img/06.jpg"/>
                     </div>
                 </div>
 
-                <h2 class="subheader">Live Demo</h2>
-
-                <div class="video">
+                <h3 class="project__subtitle">Live Demo</h3>
+                <div class="project__desc">
                     <iframe width="680" height="382" src="https://www.youtube.com/embed/QhcmdQO51VM?ecver=1" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
