--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <li>
                     <a href="#vr">Virtual and augmented</a>
                 </li>
-                <li>
+                <!--li>
                     <a href="#affective">Affective computing</a>
-                </li>
+                </li-->
                 <li>
                     <a href="#ux">UX and UI</a>
                 </li>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="content">
-            <div class="project" data-type="infovis" data-year="2017">
+            <!--div class="project" data-type="infovis" data-year="2017">
                 <h2 class="project__title"><a href="https://arloesiadur.org/">Visualizations for Arloesiadur</a></h2>
                 <p class="project__desc">
                     Interactive visualizations for Arloesiadur, Nesta, Infogr8.<br/>
@@ -69,9 +69,9 @@
                     </a>
                 </div>
                 <p class="project__meta">2017</p>
-            </div>
+            </div-->
 
-            <div class="project" data-type="interaction,affective" data-year="2017">
+            <!--div class="project" data-type="interaction,affective" data-year="2017">
                 <h2 class="project__title"><a href="https://arloesiadur.org/">Dating App and Emotions</a></h2>
                 <p class="project__desc">
                     ... Study ... . Student project.
@@ -82,7 +82,7 @@
                     </a>
                 </div>
                 <p class="project__meta">2017</p>
-            </div>
+            </div-->
 
             <div class="project" data-type="infovis" data-year="2016">
                 <h2 class="project__title"><a href="duma/en/">The Russian State Duma</a></h2>
@@ -91,8 +91,9 @@
                 </p>
                 <div class="project__pics">
                     <a href="duma/en/">
+                        <img src="img/duma3.jpg" />
                         <img src="img/duma.jpg" />
-                        <img src="img/duma.jpg" />
+                        <img src="img/duma2.jpg" />
                     </a>
                 </div>
                 <p class="project__meta">2016</p>
@@ -105,6 +106,7 @@
                 </p>
                 <div class="project__pics">
                     <a href="https://www.youtube.com/watch?v=RNfj8bh07TU">
+                        <img src="img/destruction2.jpg" />
                         <img src="img/destruction.jpg" />
                     </a>
                 </div>
@@ -118,7 +120,8 @@
                 </p>
                 <div class="project__pics">
                     <a href="movement/">
-                        <img src="img/movement.jpg" />
+                        <img src="img/movement2.jpg" />
+                        <img src="img/movement3.jpg" />
                         <img src="img/movement.jpg" />
                     </a>
                 </div>
@@ -133,21 +136,21 @@
                 <div class="project__pics">
                     <a href="ar/">
                         <img src="img/ar.jpg" />
-                        <img src="img/ar.jpg" />
+                        <!--img src="img/ar2.jpg" /-->
                     </a>
                 </div>
                 <p class="project__meta">2016</p>
             </div>
 
             <div class="project" data-type="ux" data-year="2015">
-                <h2 class="project__title"><a href="#">Lobster Redesign</a></h2>
+                <h2 class="project__title"><a href="lobster/">Lobster Redesign</a></h2>
                 <p class="project__desc">
                     Redesign of the biggest user-generated content marketplace.
                 </p>
                 <div class="project__pics">
-                    <a href="#">
+                    <a href="lobster/">
                         <img src="img/lobster.jpg" />
-                        <img src="img/lobster.jpg" />
+                        <img src="img/lobster2.jpg" />
                     </a>
                 </div>
                 <p class="project__meta">2015</p>
@@ -156,11 +159,14 @@
             <div class="project" data-type="creative" data-year="2014">
                 <h2 class="project__title"><a href="puzzla/">Puzzla</a></h2>
                 <p class="project__desc">
-                    Tool for ... .
+                    Web tool to create photo mosaic from Instagram pictures.
                 </p>
                 <div class="project__pics">
-                    <a href="uzzla/">
-                        <img src="img/katz1.jpg" />
+                    <a href="puzzla/">
+                        <img src="img/puzzla4.jpg" />
+                        <img src="img/puzzla1.jpg" />
+                        <img src="img/puzzla2.jpg" />
+                        <img src="img/puzzla3.jpg" />
                     </a>
                 </div>
                 <p class="project__meta">2014</p>
@@ -169,11 +175,12 @@
             <div class="project" data-type="infovis" data-year="2014">
                 <h2 class="project__title"><a href="hashtagmap/">Hashtag Map</a></h2>
                 <p class="project__desc">
-                    Visual representation of one day in a big city: Moscow, Berlin, Saint&nbsp;Petersburg and London.
+                    Visual representation of one day in a big city. Moscow, Berlin and London.
                 </p>
                 <div class="project__pics">
                     <a href="hashtagmap/">
                         <img src="img/hashtagmap.jpg" />
+                        <img src="img/hashtagmap2.jpg" />
                     </a>
                 </div>
                 <p class="project__meta">2014</p>
@@ -182,7 +189,7 @@
             <div class="project" data-type="infovis" data-year="2014">
                 <h2 class="project__title">Max Katz Crowdfunding Campaign. <a href="katz/eng/">People</a> and <a href="katz/eng/timeline/">Timeline</a></h2>
                 <p class="project__desc">
-                    Visualization of the <a href="http://maxkatz.livejournal.com/" target="_blank">Maxim Katz</a> crowdfunding campaign in&nbsp;2014: age, gender and transaction amount of&nbsp;contributors.
+                    Visualization of the <a href="http://maxkatz.livejournal.com/" target="_blank">Maxim Katz</a> crowdfunding campaign in&nbsp;2014; age, gender and transaction amount of&nbsp;contributors.
                 </p>
                 <div class="project__pics">
                     <a href="katz/eng/">
