--- a/lobster/index.html
+++ b/lobster/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="../css/reset.css">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
         <script src="../js/jquery-3.2.1.slim.min.js"></script>
-        <script src="../js/scrolling.js"></script>
+        <script src="../js/screens.js"></script>
     </head>
     <body>
         <div class="menu">
@@ -37,52 +37,27 @@
                 </p>
 
 
-                <div class="screens">
-                    <div class="screens__menu">
-                        <a href="#" class="screens__menu__item" for="0">Main page</a>
-                        <a href="#" class="screens__menu__item" for="1">Search</a>
-                        <a href="#" class="screens__menu__item" for="2">Log in page</a>
+                <div class="project__screens">
+                    <div class="project__screens__menu project__screens__menu--top">
+                        <a href="#" class="project__screens__menu__item" for="0">Main page</a>
+                        <a href="#" class="project__screens__menu__item" for="1">Search</a>
+                        <a href="#" class="project__screens__menu__item" for="2">Log in page</a>
                     </div>
-                    <div class="screens__frame">
-                        <div class="screens__frame__device screens__frame__device--mac"></div>
-                        <div class="screens__frame__device screens__frame__device--ipad"></div>
-                        <div class="screens__frame__device screens__frame__device--iphone"></div>
+                    <div class="project__screens__frame">
+                        <div class="project__screens__frame__device project__screens__frame__device--mac"></div>
+                        <div class="project__screens__frame__device project__screens__frame__device--ipad"></div>
+                        <div class="project__screens__frame__device project__screens__frame__device--iphone"></div>
+
+                        <div class="project__screens__frame__content">
+                        </div>
                     </div>
-                    <div class="screens__bottom">
-                        <a href="#" class="screens__bottom__item" for="mac">Big screen</a>
-                        <a href="#" class="screens__bottom__item" for="ipad">Tablet</a>
-                        <a href="#" class="screens__bottom__item" for="iphone">Phone</a>
+                    <div class="project__screens__menu project__screens__menu--bottom">
+                        <a href="#" class="project__screens__menu__item" for="mac">Big screen</a>
+                        <a href="#" class="project__screens__menu__item" for="ipad">Tablet</a>
+                        <a href="#" class="project__screens__menu__item" for="iphone">Phone</a>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!--div class="project-container">
-            <div class="project-container__foreground">
-                <div class="header">
-                    <h1 class="header__name">Lobster Redesign</h1>
-                    <p class="header__description">
-                        
-                    </p>
-                </div>
-
-                
-            </div>
-            <div class="project-container__curtain">
-            </div>
-
-            <div class="project-container__content">
-                <img class="project-container__content__img" src="main_mac.jpg" device="mac" page="0" />
-                <img class="project-container__content__img" src="main_tablet.jpg" device="ipad" page="0" />
-                <img class="project-container__content__img" src="main_iphone.jpg" device="iphone" page="0" />
-                <img class="project-container__content__img" src="search_mac.jpg" device="mac" page="1" />
-                <img class="project-container__content__img" src="search_tablet.jpg" device="ipad" page="1" />
-                <img class="project-container__content__img" src="search_iphone.jpg" device="iphone" page="1" />
-                <img class="project-container__content__img" src="login_mac.jpg" device="mac" page="2" />
-                <img class="project-container__content__img" src="login_tablet.jpg" device="ipad" page="2" />
-                <img class="project-container__content__img" src="login_iphone.jpg" device="iphone" page="2" />
-            </div>
-
-        </div-->
     </body>
 </html>
