--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
 
             <div class="project" data-type="ux" data-year="2015">
-                <h2 class="project__title"><a href="lobster/">Lobster Redesign</a></h2>
+                <h2 class="project__title"><a href="lobster/">Lobster UI Redesign</a></h2>
                 <p class="project__desc">
                     Redesign of the biggest user-generated content marketplace.
                 </p>
