--- a/lobster/index.html
+++ b/lobster/index.html
@@ -23,7 +23,7 @@
 
         <div class="content">
             <div class="project">
-                <h2 class="project__title">Lobster Redesign</h2>
+                <h2 class="project__title">Lobster UI Redesign</h2>
                 <div class="project__meta">
                     September 2015
                     <p class="project__meta__supp">
