--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
         </div>
 
         <div class="content">
-            <!--div class="project" data-type="infovis" data-year="2017">
-                <h2 class="project__title"><a href="https://arloesiadur.org/">Visualizations for Arloesiadur</a></h2>
+            <div class="project" data-type="infovis" data-year="2017">
+                <h2 class="project__title"><a href="arloesiadur/">Visualizations for Arloesiadur</a></h2>
                 <p class="project__desc">
-                    Interactive visualizations for Arloesiadur, Nesta, Infogr8.<br/>
-                    Arloesiadur, Nesta, Infogr8.
+                    Interactive visualizations for <a href="https://arloesiadur.org/">Arloesiadur</a>.<br/>
+                    For <a href="http://www.nesta.org.uk/">Nesta</a> and <a href="http://infogr8.com/">Infogr8</a>.
                 </p>
                 <div class="project__pics">
-                    <a href="https://arloesiadur.org/">
-                        <img src="img/destruction.jpg" />
-                        <img src="img/ar.jpg" />
-                        <img src="img/destruction.jpg" />
+                    <a href="arloesiadur/">
+                        <img src="img/arloesiadur1.jpg" />
+                        <img src="img/arloesiadur2.jpg" />
+                        <img src="img/arloesiadur3.jpg" />
                     </a>
                 </div>
                 <p class="project__meta">2017</p>
-            </div-->
+            </div>
 
             <!--div class="project" data-type="interaction,affective" data-year="2017">
                 <h2 class="project__title"><a href="https://arloesiadur.org/">Dating App and Emotions</a></h2>
