--- a/arloesiadur/index.html
+++ b/arloesiadur/index.html
@@ -32,7 +32,7 @@
                     </p>
                 </div>
                 <p class="project__desc">
-                    Together with <a href="http://www.nesta.org.uk/">Nesta</a> and <a href="http://infogr8.com/">Infogr8</a> I designed and implemented interactive visualisations of Wales’ industry, research and tech networks with the goal of informing policies that drive growth.
+                    In <a href="http://www.nesta.org.uk/">Nesta</a>'s project <a href="https://arloesiadur.org/">Arloesiadur</a>, assigned by <a href="http://infogr8.com/">Infogr8</a>, I designed and implemented interactive visualisations of “Wales’ industry, research and tech networks with the goal of informing policies that drive growth”.
                 </p>
 
                 <h3 class="project__subtitle">Topics</h3>
