--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h2 class="project__title"><a href="arloesiadur/">Visualizations for Arloesiadur</a></h2>
                 <p class="project__desc">
                     Interactive visualizations for <a href="https://arloesiadur.org/">Arloesiadur</a>.<br/>
-                    For <a href="http://www.nesta.org.uk/">Nesta</a> and <a href="http://infogr8.com/">Infogr8</a>.
+                    Curated by <a href="http://www.nesta.org.uk/">Nesta</a>, produced by <a href="http://infogr8.com/">Infogr8</a>.
                 </p>
                 <div class="project__pics">
                     <a href="arloesiadur/">
@@ -87,7 +87,7 @@
             <div class="project" data-type="infovis" data-year="2016">
                 <h2 class="project__title"><a href="duma/en/">The Russian State Duma</a></h2>
                 <p class="project__desc">
-                    Interactive visualization of the&nbsp;lower house of&nbsp;the&nbsp;Federal Assembly of&nbsp;Russia (parliament) structure.
+                    Interactive visualisation depicting the structure of the lower house of the Federal Assembly [parliament] of Russia, bringing to light the intricate positioning and repositioning of parliament members.
                 </p>
                 <div class="project__pics">
                     <a href="duma/en/">
@@ -116,7 +116,7 @@
             <div class="project" data-type="interaction,creative" data-year="2016">
                 <h2 class="project__title"><a href="movement/">Æ-movement</a></h2>
                 <p class="project__desc">
-                    Real-time visualization of body performance created to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience.
+                    Real-time visualization of the body in motion.
                 </p>
                 <div class="project__pics">
                     <a href="movement/">
@@ -159,7 +159,7 @@
             <div class="project" data-type="creative" data-year="2014">
                 <h2 class="project__title"><a href="puzzla/">Puzzla</a></h2>
                 <p class="project__desc">
-                    Web tool to create photo mosaic from Instagram pictures.
+                    Photo mosaic generator fueled by Instagram #pix.
                 </p>
                 <div class="project__pics">
                     <a href="puzzla/">
@@ -175,7 +175,7 @@
             <div class="project" data-type="infovis" data-year="2014">
                 <h2 class="project__title"><a href="hashtagmap/">Hashtag Map</a></h2>
                 <p class="project__desc">
-                    Visual representation of one day in a big city. Moscow, Berlin and London.
+                    Day in a big city &mdash; a visual representation. Featuring Moscow, Berlin and London's popular hashtags.
                 </p>
                 <div class="project__pics">
                     <a href="hashtagmap/">
@@ -189,7 +189,7 @@
             <div class="project" data-type="infovis" data-year="2014">
                 <h2 class="project__title">Max Katz Crowdfunding Campaign. <a href="katz/eng/">People</a> and <a href="katz/eng/timeline/">Timeline</a></h2>
                 <p class="project__desc">
-                    Visualization of the <a href="http://maxkatz.livejournal.com/" target="_blank">Maxim Katz</a> crowdfunding campaign in&nbsp;2014; age, gender and transaction amount of&nbsp;contributors.
+                    Visualization of <a href="http://maxkatz.livejournal.com/" target="_blank">Maxim Katz</a> crowdfunding campaign in&nbsp;2014; age, gender and transaction amount of&nbsp;contributors.
                 </p>
                 <div class="project__pics">
                     <a href="katz/eng/">
