--- a/movement/index.html
+++ b/movement/index.html
@@ -30,10 +30,10 @@
         <div class="page" id="page_2" bg="bg2">
             <div class="page__inner">
                 <p>
-                    Æ–movement is an interactive system for real-time visualization of body performance.
+                    Æ–movement is a real-time interactive visualisation system.
                 </p>
                 <p>
-                    Our goal is to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience.
+                    With emphasis on the unique, fleeting qualities of users' movement,<br/>our goal is to immerse the user in a full-body, kinestethic experience.
                 </p>
             </div>
         </div>
@@ -44,15 +44,21 @@
                 <ul>
                     <li>
                         <h3>Capture the Movement</h3>
-                        <p>Accelerometer and gyroscope data is collected by a mobile phone attached to a participant's ankle or a wrist.</p>
+                        <p>
+                            Data is measured by a smartphone's accelerometer and gyroscope attached to a participant's ankle or a wrist.
+                        </p>
                     </li>
                     <li>
                         <h3>Analyse the Data</h3>
-                        <p>Captured data is transfered from the mobile phone to a computer in real-time and filtered to reduce noise.</p>
+                        <p>
+                            Then, the measurements are transfered from the smartphone to a computer and filtered.
+                        </p>
                     </li>
                     <li>
                         <h3>Visualize</h3>
-                        <p>Mapping different movements to different visual variables we create a unique visual representation of participants' body expression.</p>
+                        <p>
+                            Driven by the measured data, a&nbsp;unique visual representation of participants' body movement is created in real-time.
+                        </p>
                     </li>
                 </ul>
             </div>
