--- a/puzzla/index.html
+++ b/puzzla/index.html
@@ -33,7 +33,10 @@
                     </p>
                 </div>
                 <p class="project__desc">
-                    I created the web tool allowed people to create their own photomosaic using public Instagram photos Users could uppload a picture, choose an Instagram tag and start mosaic compilation. Unfortunately, I had to archive the project when INSTAGRAM API was changed.
+                    I created a web tool which allowed people to create their own photo mosaic using public Instagram photos. Users could upload a&nbsp;picture, choose an Instagram hashtag and start the automatic compilation.
+                </p>
+                <p class="project__desc">
+                    The project has since been archived due to INSTAGRAM&nbsp;API changes.
                 </p>
 
                 <h3 class="project__subtitle">Featured Mosaics</h3>
