--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
             </div>
 
             <div class="project" data-type="vr" data-year="2016">
-                <h2 class="project__title"><a href="https://www.youtube.com/watch?v=RNfj8bh07TU">Beauty of Destruction</a></h2>
+                <h2 class="project__title"><a href="destruction/">Beauty of Destruction</a></h2>
                 <p class="project__desc">
                     VR Game for <a href="http://www.artificialrome.com/" target="_blank" >Artificial Rome</a> open studio event.
                 </p>
                 <div class="project__pics">
-                    <a href="https://www.youtube.com/watch?v=RNfj8bh07TU">
+                    <a href="destruction/">
                         <img src="img/destruction.jpg" />
                         <img src="img/destruction2.jpg" />
                     </a>
