--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <a href="#creative">Creative coding</a>
                 </li>
                 <li>
+                    <a href="#installation">Installations</a>
+                </li>
+                <li>
                     <a href="#infovis">Information visualisation</a>
                 </li>
                 <li>
@@ -55,6 +58,21 @@
         </div>
 
         <div class="content">
+            <div class="project" data-type="interaction,creative,installation" data-year="2019">
+                <h2 class="project__title"><a href="fuckinglights/">Fucking Lights</a></h2>
+                <p class="project__desc">
+                    Interactive light installation for Futuristic Porn, event by <a href="http://pornceptual.com/">Pornceptual</a>.
+                </p>
+                <div class="project__pics">
+                    <a href="fuckinglights/">
+                        <img src="img/fuckinglights1.jpg" />
+                        <img src="img/fuckinglights2.jpg" />
+                        <img src="img/fuckinglights3.jpg" />
+                    </a>
+                </div>
+                <p class="project__meta">2019</p>
+            </div>
+
             <div class="project" data-type="infovis" data-year="2017">
                 <h2 class="project__title"><a href="arloesiadur/">Visualizations for Arloesiadur</a></h2>
                 <p class="project__desc">
@@ -70,19 +88,6 @@
                 </div>
                 <p class="project__meta">2017</p>
             </div>
-
-            <!--div class="project" data-type="interaction,affective" data-year="2017">
-                <h2 class="project__title"><a href="https://arloesiadur.org/">Dating App and Emotions</a></h2>
-                <p class="project__desc">
-                    ... Study ... . Student project.
-                </p>
-                <div class="project__pics">
-                    <a href="uzzla/">
-                        <img src="img/ar.jpg" />
-                    </a>
-                </div>
-                <p class="project__meta">2017</p>
-            </div-->
 
             <div class="project" data-type="infovis" data-year="2016">
                 <h2 class="project__title"><a href="duma/en/">The Russian State Duma</a></h2>
