--- a/fuckinglights/index.html
+++ b/fuckinglights/index.html
@@ -46,12 +46,12 @@
                 </p>
                 <p class="project__desc">
                     <img src="img/three.jpg" />
-                    <img src="img/02.gif" />
+                    <!--img src="img/02.gif" /-->
 
-                    <!--video width="320" height="240" controls>
-                      <source src="fuckinglights.mov">
+                    <video width="800" height="450" controls>
+                      <source src="img/fuckinglights.mp4">
                         Your browser does not support the video tag.
-                    </video-->
+                    </video>
                 </p>
 
                 <p class="project__desc project__desc--big-prefix">
