--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
         </div>
 
         <div class="content">
+            <div class="intro" data-type="">
+                <h2 class="intro__title">Hi!</h2>
+                <p class="intro__desc">
+                    I am an interaction designer and creative technologist based in Berlin. I have expertise in interaction and UX&nbsp;design, data&nbsp;visualization, software&nbsp;development and the production of interactive installations. My biggest passion is to&nbsp;explore the&nbsp;intersection of tech, art and science. For collaboration write to&nbsp;<a href="mailto:p.devaikin@gmail.com">p.devaikin@gmail.com</a>. In my <a href="cv_devaikin.pdf">CV</a> you can find detailed information about my background and work experience.
+                </p>
+            </div>
+
             <div class="project" data-type="interaction,creative,installation" data-year="2019">
                 <h2 class="project__title"><a href="fuckinglights/">Fucking Lights</a></h2>
                 <p class="project__desc">
