--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
 
             <div class="project" data-type="interaction,creative,installation" data-year="2019">
-                <h2 class="project__title"><a href="fuckinglights/">Fucking Lights</a></h2>
+                <h2 class="project__title"><a href="x/">Installation X</a></h2>
                 <p class="project__desc">
                     Interactive light installation for Futuristic Porn, event by <a href="http://pornceptual.com/">Pornceptual</a>.
                 </p>
