--- a/x/index.html
+++ b/x/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Fucking Lights | Petr Devaikin</title>
+        <title>Installation X | Petr Devaikin</title>
         <meta charset="UTF-8">
         <meta name="description" content="Free Web tutorials">
         <meta name="keywords" content="Design,Interaction,UX,Visualization,Coding,Development">
@@ -22,7 +22,7 @@
 
         <div class="content">
             <div class="project">
-                <h2 class="project__title">Fucking Lights</h2>
+                <h2 class="project__title">Installation X</h2>
                 <div class="project__meta">
                     February 2019
                     <p class="project__meta__supp">
@@ -31,7 +31,7 @@
                     </p>
                 </div>
                 <p class="project__desc">
-                    Fucking Lights is a light installation which creates an opportunity to experience an age-old practice in new light.
+                    X is a light installation which creates an opportunity to experience an age-old practice in new light.
                 </p>
                 <p class="project__desc">
                     The Arduino-based device senses each sling frame movement. An impulsive stroke triggers a flash which travels along the X-shaped path.
@@ -48,10 +48,10 @@
                     <img src="img/three.jpg" />
                     <!--img src="img/02.gif" /-->
 
-                    <video width="800" height="450" controls>
+                    <!--video width="800" height="450" controls>
                       <source src="img/fuckinglights.mp4">
                         Your browser does not support the video tag.
-                    </video>
+                    </video-->
                 </p>
 
                 <p class="project__desc project__desc--big-prefix">
