--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     Interactive light installation for Futuristic Porn, event by <a href="http://pornceptual.com/">Pornceptual</a>.
                 </p>
                 <div class="project__pics">
-                    <a href="fuckinglights/">
+                    <a href="x/">
                         <img src="img/fuckinglights1.jpg" />
                         <img src="img/fuckinglights2.jpg" />
                         <img src="img/fuckinglights3.jpg" />
